    * Indeo2 video decoder
    * Fraps video decoder (v0 & v1)
    * Vorbis audio decoder
    * RV20 fixes
    * VP3 decoder fixes and speedup
    * countless bug fixes all over the place
    * vstrict=-1 is default, Snow, ffv1 etc. need vstrict=-2

    MEncoder:
    * audio encoding modularized
    * AAC (FAAC) audio encoding
    * border processing adaptive quantization in libavcodec

    Ports:
    * improved timer function on Mac OS X
    * New Mac OS X "macosx" video output driver. Supported on OS X 10.4
      and 10.3 with QuickTime 7 (requires QuickTime 7 SDK to build on 10.3)
    * Mac OS X 10.4 (Tiger) fixes

    Others:
    * enabled hinting for TrueType fonts
    * support for file:// syntax



  pre7: "PatentCounter" April 16, 2005

    Security:
    * heap overflow in Real RTSP streaming code fixed
    * buffer overflow in MMST streaming code fixed


    DOCS:
    * Czech documentation translation in progress
    * German man page almost synced
    * slave mode command documentation finished
    * TOOLS documented in TOOLS/README
    * audio filter documentation moved to the man page and updated
    * all audio filters documented
    * improved encoding guide
    * preliminary documentation for Snow codec in DOCS/tech/snow.txt
    * misc updates and fixes all over the place

    Ports:
    * DirectX video output fixed on Windows95
    * DirectX video output now supports 256 color mode
    * audio device selection support for dsound audio output driver
    * --enable-macosx-bundle, use config directory in the appwrapper on OS X
    * Sun audio output cleanup
    * x86_64 support fixes
    * OpenBSD support in libdha
    * VIDIX support for more Radeon 9200 models

    Drivers:
    * fixed ontop event for some window managers
    * audio output layer cleanup
    * unified colorkey handling code
    * vo_xvmc panscan fix
    * fixed some X11 crashes
    * OSD fixes in various video output drivers

    Decoders:
    * TWinVQ decoder via binary DLL